--- a/css/mq.css
+++ b/css/mq.css
@@ -364,11 +364,11 @@
   @media (max-width: 900px) {
 
     .about {
-      display: none;
+      /* display: none; */
     }
 
     .about-content {
-      display: none;
+      /* display: none; */
     }
 
 
@@ -376,6 +376,53 @@
 
   @media (max-width: 600px) {
     .about {
+      /* display: none; */
+    }
+  }
+
+  @media (max-width: 425px) {
+    .about {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      flex-wrap: wrap;
+      max-width: 100%;
+      max-height: 100%;
+      box-sizing: border-box;
+    }
+  
+    .about-content {
+      margin: auto;
+      max-width: 100%;
+    }
+  
+    .about-content h1 {
+      font-size: 2.4em;
+      width: 100%;
+      margin: 70rem auto 0;
+    }
+  
+    .about-content p {
+      font-size: 1.5em;
+      width: 100%;
+      margin: 4rem auto;
+      line-height: 2.5rem;
+    }
+  
+    .box-social {
+      max-width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .about-btn {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      margin: 7rem;
+    }
+  
+    .about-illustration {
       display: none;
     }
   }
@@ -401,6 +448,10 @@
     }
   }
 
+  @media (max-width: 425px) {
+    
+  }
+
   /*
 ----------------
     PROJECT 
@@ -420,6 +471,10 @@
     .project {
       display: none;
     }
+  }
+
+  @media (max-width: 425px) {
+    
   }
 
   /*
@@ -443,6 +498,9 @@
     }
   }
 
+  @media (max-width: 425px) {
+    
+  }
   /*
 ----------------
     FOOTER 
@@ -461,6 +519,10 @@
     footer {
       display: none;
     }
+  }
+
+  @media (max-width: 425px) {
+    
   }
 
   /* @media(max-width: 992px) {
