--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,20 @@ body {
             *** NAVIGATION ***
 **********************************************/
 
+.logo {
+  position: fixed;
+  z-index: 100;
+  margin: 1.6rem 4.6rem;
+  left: 11.5rem;
+  top: 1rem;
+}
+.logo img {
+  position: absolute;
+  top: -1.5rem;
+  left: -1rem;
+  width: 9rem;
+} 
+
 #navigation {
   position: fixed;
   z-index: 40;
@@ -32,7 +46,7 @@ body {
   font-size: 3rem;
   padding: 1rem 5rem;
   line-height: 6.5rem;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Cabin', sans-serif;
   margin: auto;
   color: #373737;
 }
@@ -46,19 +60,7 @@ body {
 display: none;
 }
 
-/* .logo {
-  position: fixed;
-  z-index: 100;
-  margin: 1.6rem 4.6rem;
-  left: 11.5rem;
-  top: 1rem;
-}
-.logo img {
-  position: absolute;
-  top: -1.5rem;
-  left: -1rem;
-  width: 9rem;
-} */
+/* */
 /* #navigation {
   position: fixed;
   z-index: 99;
@@ -216,24 +218,24 @@ a:visited {
   z-index: 98;
   max-width: 100%;
   position: absolute;
-  top: 40%;
-  left: 13.5%;
+  top: 38%;
+  left: 16%;
   margin: auto;
+  font-family: 'Cabin', sans-serif;
 }
 
 .hero-text h1 {
-  font-family: 'Lato', sans-serif;
   font-weight: 700;
-  font-size: 8rem;
+  font-size: 8.5rem;
   text-align: center;
   line-height: 8rem;
   color: #fff;
 }
 
 .hero-text h2 {
-  font-family: 'Lato', sans-serif;
   font-weight: 400;
-  font-size: 6.5rem;
+  font-size: 6rem;
+  line-height: 10rem;
   font-weight: 700;
   color: #fff;
 }
@@ -249,7 +251,7 @@ a:visited {
     width: 7rem;
     position: absolute;
     top: 90%;
-    left: 50%;
+    left: 51%;
     transform: translate(-50%, -50%);
     font-size: 5rem;
     line-height: 8rem;
