--- a/css/style.css
+++ b/css/style.css
@@ -18,191 +18,54 @@ body {
 **********************************************/
 
 .logo {
-  position: fixed;
-  z-index: 100;
-  margin: 1.6rem 4.6rem;
-  left: 11.5rem;
-  top: 1rem;
+  position: relative;
 }
 .logo img {
   position: absolute;
-  top: -1.5rem;
-  left: -1rem;
+  bottom: -3.3rem;
+  right: 44rem;
   width: 9rem;
 } 
 
-#navigation {
-  position: fixed;
-  z-index: 40;
-  width: 100%;
-  background-color: #31859bff;
-  text-align: center;
-  height: 10rem;
-  transition: all 0.4s ease-in-out;
-}
-
-#navigation a {
-  text-decoration: none;
-  font-size: 3rem;
-  padding: 1rem 5rem;
-  line-height: 6.5rem;
-  font-family: 'Cabin', sans-serif;
-  margin: auto;
-  color: #373737;
-}
-
-
-#navigation a:active {
-  font-size: 4rem;
-}
-
-.icon {
-display: none;
-}
-
-/* */
-/* #navigation {
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  background: #31859bff;
-  text-align: center;
-  height: 10rem;
-  transition: all 0.4s ease-in-out;
+nav {
   display: flex;
   justify-content: flex-end;
-}
-
-#navigation a {
-  text-decoration: none;
-  font-size: 2.5rem;
-  padding: 1rem 3rem;
-  line-height: 6.5rem;
-  font-family: 'Lato', sans-serif;
-  margin: 1rem 1rem;
-  color: #000;
-  position: relative;
-  background: transparent;
-}
-
-#navigation  a:link,
-#navigation  a:visited {
-  padding-bottom: 0.5rem;
-  text-decoration: none;
-}
-
-#navigation a::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  bottom: 5px;
-  width: 60%;
-  height: 1.5px;
-  opacity: 0;
-  background-color: #fff;
-  transform: translate(-50%, 0);
-  transition: all 0.3s ease-in-out;
-}
-
-#navigation a:hover::after {
-  width: 75%;
-  opacity: 1;
-}
-
-.border {
-  position: relative;
-}
-
-a:link,
-a:visited {
-  color: #9f9f9f;
-  -webkit-transition: background-color rgb(207, 204, 204) 0.2s, color 0.2s;
-  transition: background-color rgb(207, 204, 204) 4.2s, color 0.2s;
-  border-bottom: 2px solid transparent;
-  transition: border-bottom 0.2s, color 0.2s;
-} */
-/* #navigation a:active {
-  
-} */
-
-
-
-/* nav {
   position: fixed;
+  z-index: 100;
+  margin: auto;
+  padding: 2.5rem;
   width: 100%;
-  line-height: 6rem;
-  z-index: 99;
-}
-
-nav ul {
-  line-height: 6rem;
-  list-style: none;
-  text-align: right;
-  overflow: hidden;
-  padding-right: 4rem;
-  padding: 0;
-  margin: 0;
-  transition: 1s;
-  color: #fff;
-  background: transparent;
-}
-
-nav.color ul {
   background: #31859bff;
+  font-family: 'Cabin', sans-serif;
 }
+
 
 nav ul li {
   display: inline-block;
-  padding: 1.6rem 4rem;
+}
+
+nav ul li:not(:first-child) {
+  margin-left: 48px;
+}
+
+nav ul li:last-child {
+  margin-right: 24px;
 }
 
 nav ul li a {
-  font-family: 'Lato', sans-serif;
+  display: inline-block;
+  outline: none;
+  color: #000;
+  text-transform: uppercase;
   text-decoration: none;
   font-size: 2.5rem;
-  position: relative;
+  letter-spacing: 1.2px;
+  font-weight: 600;
 }
 
-#menu li a {
-  color: #000;
-} */
-
-/* #menu li a:link,
-#menu li a:visited {
-  padding-bottom: 0.5rem;
-  text-decoration: none;
+.hidden {
+  display: none;
 }
-
-#menu li a::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  bottom: -5px;
-  width: 60%;
-  height: 1.5px;
-  opacity: 0;
-  background-color: #fff;
-  transform: translate(-50%, 0);
-  transition: all 0.3s ease-in-out;
-}
-
-#menu li a:hover::after {
-  width: 100%;
-  opacity: 1;
-}
-
-.border {
-  position: relative;
-}
-
-a:link,
-a:visited {
-  color: #9f9f9f;
-  -webkit-transition: background-color rgb(207, 204, 204) 0.2s, color 0.2s;
-  transition: background-color rgb(207, 204, 204) 4.2s, color 0.2s;
-  border-bottom: 2px solid transparent;
-  transition: border-bottom 0.2s, color 0.2s;
-} */
 
 .banner {
   background: #31859bff;
@@ -1076,4 +939,3 @@ footer p {
     transform: translate3d(0, 100%, 0);
   }
 }
-
