--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,11 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
 }
+
 body {
   height: 100vh;
 }
@@ -20,25 +22,30 @@ body {
 .logo {
   position: relative;
 }
+
 .logo img {
   position: absolute;
-  bottom: -2.8rem;
+  bottom: -2.2rem;
   right: 44rem;
-  width: 9rem;
-} 
+  width: 7rem;
+}
 
 nav {
   display: flex;
   justify-content: flex-end;
   position: fixed;
-  z-index: 100;
-  margin: auto;
-  padding: 3.3rem;
+  padding: 1rem;
   width: 100%;
+  top: 0;
+  left: 0;
   background: #31859bff;
   font-family: 'Cabin', sans-serif;
+  transition: 0.3s ease-in-out;
 }
 
+nav.hide {
+  top: -50px;
+}
 
 nav ul li {
   display: inline-block;
@@ -67,22 +74,16 @@ nav ul li a {
   display: none;
 }
 
-.banner {
-  background: #31859bff;
-  background: -webkit-linear-gradient(to left, #31859bff, #31859bff);
-  width: 100%;
-  height: 100vh;
-}
-
 .hero-text {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   z-index: 98;
   max-width: 100%;
+  width: 100%;
   position: absolute;
   top: 38%;
-  left: 16%;
   margin: auto;
   font-family: 'Cabin', sans-serif;
 }
@@ -108,36 +109,45 @@ nav ul li a {
   cursor: pointer;
 }
 
-#icon-arrow{
+#icon-arrow {
   color: black;
-    height: 7rem;
-    width: 7rem;
-    position: absolute;
-    top: 90%;
-    left: 51%;
-    transform: translate(-50%, -50%);
-    font-size: 5rem;
-    line-height: 8rem;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-    background: white;
-    box-shadow: 0 0 0 0 #fff;
-    z-index: 96;
-    animation: pulse 1.9s infinite;
+  height: 7rem;
+  width: 7rem;
+  position: absolute;
+  top: 90%;
+  left: 51%;
+  transform: translate(-50%, -50%);
+  font-size: 5rem;
+  line-height: 8rem;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  background: white;
+  box-shadow: 0 0 0 0 #fff;
+  z-index: 9;
+  animation: pulse 1.9s infinite;
 }
-.arrow{
+
+.arrow {
   width: 4rem;
   height: 4rem;
 }
 
 @keyframes pulse {
-  to
-  {
-      box-shadow: 0 0 0 1rem rgba(255, 255, 255, 0.01);
+  to {
+    box-shadow: 0 0 0 1rem rgba(255, 255, 255, 0.01);
   }
 }
+
+
+.banner {
+  background: #31859bff;
+  background: -webkit-linear-gradient(to left, #31859bff, #31859bff);
+  width: 100%;
+  height: 100vh;
+}
+
 .circles {
   position: absolute;
   top: 0;
@@ -222,7 +232,8 @@ nav ul li a {
 .circles li:nth-child(9) {
   left: 20%;
   width: 1.5rem;
-  height: 1.5rem;;
+  height: 1.5rem;
+  ;
   animation-delay: 2s;
   animation-duration: 35s;
 }
@@ -234,18 +245,21 @@ nav ul li a {
   animation-delay: 0s;
   animation-duration: 11s;
 }
+
 .circles li:nth-child(11) {
   left: 70%;
   width: 2rem;
   height: 2rem;
   animation-delay: 4s;
 }
+
 .circles li:nth-child(12) {
   left: 35%;
   width: 4rem;
   height: 4rem;
   animation-delay: 7s;
 }
+
 .circles li:nth-child(13) {
   left: 30%;
   width: 2rem;
@@ -269,6 +283,7 @@ nav ul li a {
   }
 
 }
+
 /**********************************************
             *** ABOUT ***
 **********************************************/
@@ -327,7 +342,7 @@ nav ul li a {
   border-radius: 5px;
   padding: 0.1rem 0.3rem;
   background-color: #b9e4fd;
-  
+
 }
 
 .box-social {
@@ -360,6 +375,7 @@ nav ul li a {
   left: 0.25rem;
   font-size: 1.5rem;
 }
+
 .desc-github {
   position: absolute;
   bottom: -0.2rem;
@@ -512,7 +528,8 @@ nav ul li a {
   padding-top: 0.7rem;
   width: 5rem;
 }
-.skill-framework .icon-bulma{
+
+.skill-framework .icon-bulma {
   height: 4rem;
   width: 10rem;
 }
@@ -731,7 +748,8 @@ nav ul li a {
   padding: 18px 36px;
   border-radius: 61px;
   box-shadow: inset 0 0 0 2px #31859bff;
-  transition: 300ms box-shadow cubic-bezier(0.4, 0, 0.6, 1), 300ms background-color cubic-bezier(0.4, 0, 0.6, 1), 300ms color cubic-bezier(0.4, 0, 0.6, 1);;
+  transition: 300ms box-shadow cubic-bezier(0.4, 0, 0.6, 1), 300ms background-color cubic-bezier(0.4, 0, 0.6, 1), 300ms color cubic-bezier(0.4, 0, 0.6, 1);
+  ;
   color: #31859bff;
 }
 
@@ -739,7 +757,8 @@ nav ul li a {
   box-shadow: inset 0 0 0 4px #31859bff;
   color: #5778F3;
 }
-.contact-button a{
+
+.contact-button a {
   text-decoration: none;
   font-size: 2rem;
   background: none;
