--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,7 @@ header .logo:focus, header .logo a:focus, header img:focus{
   max-width: 100%;
   margin-top: 1.5rem;
   overflow-x: hidden;
+  background: red;
 }
 
 
@@ -486,6 +487,7 @@ header .logo:focus, header .logo a:focus, header img:focus{
   flex-direction: column;
   justify-content: center;
   margin: 10.5rem 5rem;
+  background: white;
 }
 
 .skill-box h3 {
@@ -510,11 +512,9 @@ header .logo:focus, header .logo a:focus, header img:focus{
 .skill-front {
   display: flex;
   flex-direction: column;
-  margin: auto;
+  margin: 0 auto;
   min-height: 20vh;
   padding: 0 5rem;
-  margin-top: 15px;
-  margin-bottom: 15px;
 }
 
 .skill-front img, .skill-back img {
